* Added zdravko (pvk)

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,8 @@ Paul Nieuwdorp								(pmn)
 Current Maintainer:
 -------------------
 Patrick van Kleef <iodbc@openlinksw.com>				(pvk)
+
+
+Contributors:
+-------------
+Zdravko Tashev								(zt)
